Set up a loss function and an optimizer

--- a/01_pytorch_workflow.ipynb
+++ b/01_pytorch_workflow.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMdi8IjRLDlPhtatnG85KkQ",
+      "authorship_tag": "ABX9TyN1wBmnExUDMe60ZmELCKzp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -606,10 +606,43 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "## 3 Train model\n",
+        "\n",
+        "The whole idea of training is for a model to move from some *unknown* parameters (these may be random) to some *known* parameters.\n",
+        "\n",
+        "In other words from a poor representation of the data to a better representation of the data.\n",
+        "\n",
+        "One way to measure how poor or how wrong your model predictions are is to use a loss function\n",
+        "\n",
+        "* Note: Loss function may also be called cost function or criterion in different areas.\n",
+        "\n",
+        "Thing's we need to train\n",
+        "\n",
+        "* **Loss Function:** A function to measure how wrong your model's predictions are to the ideal outputs, lower is better.\n",
+        "* **Optimizer:** Takes into account the loss of a model and adjusts the model's parameters\n",
+        "\n",
+        "And specifically for PyTorch, we need:\n",
+        "* A training loop\n",
+        "* A testing loop"
+      ],
       "metadata": {
         "id": "RfWO3MPvWU0A"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Set up a loss function\n",
+        "loss_fn = nn.L1Loss()\n",
+        "\n",
+        "# Set up an optimizer\n",
+        "optimizer = torch.optim.SGD(params=model_0.parameters,\n",
+        "                            lr=0.01) #lr = learning rate = possibly the most important important hyperperameter you can set"
+      ],
+      "metadata": {
+        "id": "gp6r3qEJcYyk"
       },
       "execution_count": null,
       "outputs": []
