Add Training loop

--- a/01_pytorch_workflow.ipynb
+++ b/01_pytorch_workflow.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN1wBmnExUDMe60ZmELCKzp",
+      "authorship_tag": "ABX9TyP4do3gVFG6vxc27rCOLiM4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -643,6 +643,59 @@
       ],
       "metadata": {
         "id": "gp6r3qEJcYyk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Building a train and testing loops in PyTorch\n",
+        "\n",
+        "In a training loop we need:\n",
+        "0. Loop through the data\n",
+        "1. Forward pass (this involves data moving through our model's `forward()` functions) also called forward propagation - to make predictions on data\n",
+        "2. Calculate the loss (compare forward pass predictions to ground truth labels)\n",
+        "3. Optimizer zero grad\n",
+        "4. Loss backward - move backwards through the network to calculate the gradient of each of the parameters of our model with respect of the loss\n",
+        "5. Optimizer step - use the optimizer to adjust our model's parameters to try and improve the loss (**gradient descent**)"
+      ],
+      "metadata": {
+        "id": "rfap25mhk-hW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# An epoch is one loop through the data\n",
+        "epochs = 1\n",
+        "\n",
+        "### Training\n",
+        "# 0. Loop through the data\n",
+        "for epoch in range(epochs):\n",
+        "  # set the model to training mode\n",
+        "  model_0.train() # train mode in PyTorch sets all the parameters that require gradients to require gradient\n",
+        "\n",
+        "  # 1. Forward pass\n",
+        "  y_pred = model_0(X_train)\n",
+        "\n",
+        "  # 2. Calculate the loss\n",
+        "  loss = loss_fn(y_pred, y_train)\n",
+        "\n",
+        "  # 3. Optimizer zero grad\n",
+        "  optimizer.zero_grad()\n",
+        "\n",
+        "  # 4. Perform backpropagation on the loss with respect to the parameters of the model\n",
+        "  loss.backward()\n",
+        "\n",
+        "  # 5. Step the optimizer (perform gradient descent)\n",
+        "  optimizer.step() # by default how the optimizer changes will accumulate through the loop so we have to zero them above in step 3 for the next iteration of the loop\n",
+        "\n",
+        "  ### Testing\n",
+        "  #model_0.eval() #turns off gradient tracking"
+      ],
+      "metadata": {
+        "id": "1HychkHllDnJ"
       },
       "execution_count": null,
       "outputs": []
