Add code to save the model

--- a/01_pytorch_workflow.ipynb
+++ b/01_pytorch_workflow.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyOVUyEaSC0wfWC/ffFFb3iO",
+      "authorship_tag": "ABX9TyMQQlDAq8guVqu0Aecig5lR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -116,7 +115,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Lx9WihL254J4",
-        "outputId": "d3ea7463-42b6-46e8-d049-edf0ff42b24d"
+        "outputId": "44f6a8e4-ff9e-4aa8-ba12-0bd53d8ad5a9"
       },
       "execution_count": 2,
       "outputs": [
@@ -161,7 +160,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ba02a917-1b8e-4955-cedf-6dc4f0c51221"
+        "outputId": "b0679846-f7d8-453f-aac5-644cab4eb453"
       },
       "execution_count": 3,
       "outputs": [
@@ -204,7 +203,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xcKridml7QuQ",
-        "outputId": "7023626c-141e-46c4-e4ea-c6909047762b"
+        "outputId": "6c874d3b-69f8-4e38-e71f-c61e11b29a99"
       },
       "execution_count": 4,
       "outputs": [
@@ -239,7 +238,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QPaJ5FIY7eZt",
-        "outputId": "70b02128-ac13-40da-d10d-b7beb25d5569"
+        "outputId": "e40f1331-bba2-4658-f5c5-0e537f8fce80"
       },
       "execution_count": 5,
       "outputs": [
@@ -377,7 +376,7 @@
           "height": 599
         },
         "id": "KjbWi0Ca_1p-",
-        "outputId": "25cebfab-c384-48b8-a9e4-2bf87dc6e7eb"
+        "outputId": "7a2f9f7b-146f-4bca-b79a-983670d9b70b"
       },
       "execution_count": 7,
       "outputs": [
@@ -481,9 +480,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XR8rRIW1MCA9",
-        "outputId": "84b09b08-b23d-40f2-9ed1-405b2899a405"
+        "outputId": "5f0f8dbe-cf00-431c-8914-54126aab9dd7"
       },
-      "execution_count": 114,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -496,7 +495,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 114
+          "execution_count": 9
         }
       ]
     },
@@ -511,9 +510,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_tScJIk9MXpn",
-        "outputId": "01449649-11f2-48d4-b18d-1ab901544798"
+        "outputId": "b4270d02-20cb-4df3-93e7-f53ddf9c0c6b"
       },
-      "execution_count": 115,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -523,7 +522,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 115
+          "execution_count": 10
         }
       ]
     },
@@ -554,9 +553,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MAy9zjkxUDbO",
-        "outputId": "02ce1bd6-3109-44c7-ca1d-863555bc44c4"
+        "outputId": "aa7baff7-ca4d-4c0f-f96a-ffcb7e9d1742"
       },
-      "execution_count": 116,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -575,7 +574,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 116
+          "execution_count": 11
         }
       ]
     },
@@ -590,9 +589,9 @@
           "height": 599
         },
         "id": "80EwG8e_VBZM",
-        "outputId": "bc5b9a8a-daff-460a-a7de-a31ccfbd8c7a"
+        "outputId": "30b9180f-f4e2-44cb-fea9-50f7476319ae"
       },
-      "execution_count": 117,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "display_data",
@@ -645,7 +644,7 @@
       "metadata": {
         "id": "gp6r3qEJcYyk"
       },
-      "execution_count": 118,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -724,9 +723,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8b8d04d2-7f2e-4560-c147-ef71f58bd61c"
+        "outputId": "9d92dc01-b697-43f6-cfcb-7689ddad8b99"
       },
-      "execution_count": 119,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -769,7 +768,7 @@
       "metadata": {
         "id": "MiOuGPPRh4Jp"
       },
-      "execution_count": 120,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -784,9 +783,9 @@
           "height": 599
         },
         "id": "KEnbLJ6epe2_",
-        "outputId": "05ecfa9d-e937-443d-f795-e4f86b553fa2"
+        "outputId": "b9063eb3-78d9-4bd6-d5b7-c3353910326e"
       },
-      "execution_count": 121,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "display_data",
@@ -812,9 +811,9 @@
           "height": 599
         },
         "id": "Gi2_2RdlplNn",
-        "outputId": "4c179cd5-963e-460f-ab4b-8dab95e63d3e"
+        "outputId": "23aa6e0a-8b9d-430c-998f-96aedaf441ef"
       },
-      "execution_count": 122,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "display_data",
@@ -844,19 +843,19 @@
           "height": 490
         },
         "id": "jy8uaHAMp75p",
-        "outputId": "7ce3be9b-58c4-4234-aea8-d583d4e6fba2"
+        "outputId": "0dcfffdc-a41d-4ff1-bd69-688bddab5f21"
       },
-      "execution_count": 123,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.legend.Legend at 0x7edd8770dab0>"
+              "<matplotlib.legend.Legend at 0x7ff32fadecb0>"
             ]
           },
           "metadata": {},
-          "execution_count": 123
+          "execution_count": 18
         },
         {
           "output_type": "display_data",
@@ -871,12 +870,88 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Saving a model in PyTorch\n",
+        "\n",
+        "There are three main method for sacing and loading models in PyTorch.\n",
+        "\n",
+        "1. `torch.save()` - allows you to save a PyTorch object in Python's pickle format\n",
+        "2. `torch.load()` - allows you to load a saved PyTorch object\n",
+        "3. `torch.nn.module.load_state_dict()` - this allows to load a model's saved state dictionary  "
+      ],
+      "metadata": {
+        "id": "qsy7__mA5oDP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Saving out PyTorch model\n",
+        "from pathlib import Path\n",
+        "\n",
+        "# 1. Create a model directory\n",
+        "MODEL_PATH = Path(\"models\")\n",
+        "MODEL_PATH.mkdir(parents=True, exist_ok=True)\n",
+        "\n",
+        "# 2. Create a model save path\n",
+        "MODEL_NAME = \"01_pytorch_workflow_model_0.pth\"\n",
+        "\n",
+        "MODEL_SAVE_PATH = MODEL_PATH / MODEL_NAME\n",
+        "\n",
+        "# 3. Save the model's state dict\n",
+        "print(f\"Saving the model to: {MODEL_SAVE_PATH}\")\n",
+        "torch.save(obj=model_0.state_dict(), f=MODEL_SAVE_PATH)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "odm9dJbOANUC",
+        "outputId": "0eeb264c-882b-4628-ead4-ae1a58db695a"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Saving the model to: models/01_pytorch_workflow_model_0.pth\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!ls -l models"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AxL8Eu_tEt24",
+        "outputId": "ced36003-2e12-4ae4-bcc9-548344695db4"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "total 4\n",
+            "-rw-r--r-- 1 root root 1680 Jan 17 20:18 01_pytorch_workflow_model_0.pth\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "qsy7__mA5oDP"
+        "id": "1Z45r2jaFvQu"
       },
-      "execution_count": 123,
+      "execution_count": null,
       "outputs": []
     }
   ]
