Add and test code for loading model

--- a/01_pytorch_workflow.ipynb
+++ b/01_pytorch_workflow.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMQQlDAq8guVqu0Aecig5lR",
+      "authorship_tag": "ABX9TyP4YJecNvFOIoFSM4lh1tXB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -946,13 +946,187 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "## Loading a PyTorch model\n",
+        "\n",
+        "Since only the `state_dict()` of our model is saved rather than the entire model, we'll create a new instance of our model class and load the saved `state_dict()` into that"
+      ],
       "metadata": {
         "id": "1Z45r2jaFvQu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# To load in a saved state_dict() we have to instantiate a new instance of our model class\n",
+        "loaded_model_0 = LinearRegressionModel()\n",
+        "\n",
+        "# Load the saved state_dict of model_0\n",
+        "loaded_model_0.load_state_dict(torch.load(f=MODEL_SAVE_PATH))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "I2hWVPvWHzLH",
+        "outputId": "df0de56e-9471-4fda-e8c8-adc82a730405"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<All keys matched successfully>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "loaded_model_0.state_dict()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yqrGaDyuJCp8",
+        "outputId": "59ea2026-7c44-4a7e-f346-aa2b599d7747"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "OrderedDict([('weight', tensor([0.6945])), ('bias', tensor([0.2997]))])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Make some predictiosn with our loaded model\n",
+        "loaded_model_0.eval()\n",
+        "with torch.inference_mode():\n",
+        "  loaded_model_preds = loaded_model_0(X_test)\n",
+        "\n",
+        "loaded_model_preds"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "inzCH2kJJFNC",
+        "outputId": "8a13d679-14b4-4308-d0d8-9f62f6622c59"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.8552],\n",
+              "        [0.8691],\n",
+              "        [0.8830],\n",
+              "        [0.8969],\n",
+              "        [0.9108],\n",
+              "        [0.9247],\n",
+              "        [0.9386],\n",
+              "        [0.9525],\n",
+              "        [0.9663],\n",
+              "        [0.9802]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Make some model preds with our model before we saved it\n",
+        "model_0.eval()\n",
+        "with torch.inference_mode():\n",
+        "  y_preds = model_0(X_test)\n",
+        "\n",
+        "y_preds"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MVJ6xnSxJ0fG",
+        "outputId": "feb09505-9129-4a7b-8c88-97da64cd6a72"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.8552],\n",
+              "        [0.8691],\n",
+              "        [0.8830],\n",
+              "        [0.8969],\n",
+              "        [0.9108],\n",
+              "        [0.9247],\n",
+              "        [0.9386],\n",
+              "        [0.9525],\n",
+              "        [0.9663],\n",
+              "        [0.9802]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Compare loaded model preds woth original model preds\n",
+        "y_preds == loaded_model_preds"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pUA0_SlPJcsQ",
+        "outputId": "a5ee6ca7-24b4-4131-9b73-062eee23819c"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[True],\n",
+              "        [True],\n",
+              "        [True],\n",
+              "        [True],\n",
+              "        [True],\n",
+              "        [True],\n",
+              "        [True],\n",
+              "        [True],\n",
+              "        [True],\n",
+              "        [True]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
     }
   ]
 }
