--- a/01_pytorch_workflow.ipynb
+++ b/01_pytorch_workflow.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP4YJecNvFOIoFSM4lh1tXB",
+      "authorship_tag": "ABX9TyPInTr2Bh0UU1qaTdS6Vu79",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -65,7 +65,7 @@
       "metadata": {
         "id": "JSxXw9tz3lJe"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -101,7 +101,7 @@
         "weight = 0.7\n",
         "bias = 0.3\n",
         "\n",
-        "#Create\n",
+        "# Create the regression line parameters\n",
         "start = 0\n",
         "end = 1\n",
         "step = 0.02\n",
@@ -117,7 +117,7 @@
         "id": "Lx9WihL254J4",
         "outputId": "44f6a8e4-ff9e-4aa8-ba12-0bd53d8ad5a9"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -162,7 +162,7 @@
         },
         "outputId": "b0679846-f7d8-453f-aac5-644cab4eb453"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -205,7 +205,7 @@
         "id": "xcKridml7QuQ",
         "outputId": "6c874d3b-69f8-4e38-e71f-c61e11b29a99"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -240,7 +240,7 @@
         "id": "QPaJ5FIY7eZt",
         "outputId": "e40f1331-bba2-4658-f5c5-0e537f8fce80"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -362,7 +362,7 @@
       "metadata": {
         "id": "MoxQ-EgB8oqp"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -378,7 +378,7 @@
         "id": "KjbWi0Ca_1p-",
         "outputId": "7a2f9f7b-146f-4bca-b79a-983670d9b70b"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -434,7 +434,7 @@
       "metadata": {
         "id": "MtEf7F3TMwLO"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -482,7 +482,7 @@
         "id": "XR8rRIW1MCA9",
         "outputId": "5f0f8dbe-cf00-431c-8914-54126aab9dd7"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -512,7 +512,7 @@
         "id": "_tScJIk9MXpn",
         "outputId": "b4270d02-20cb-4df3-93e7-f53ddf9c0c6b"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -555,7 +555,7 @@
         "id": "MAy9zjkxUDbO",
         "outputId": "aa7baff7-ca4d-4c0f-f96a-ffcb7e9d1742"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -591,7 +591,7 @@
         "id": "80EwG8e_VBZM",
         "outputId": "30b9180f-f4e2-44cb-fea9-50f7476319ae"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -644,7 +644,7 @@
       "metadata": {
         "id": "gp6r3qEJcYyk"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -725,7 +725,7 @@
         },
         "outputId": "9d92dc01-b697-43f6-cfcb-7689ddad8b99"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -768,7 +768,7 @@
       "metadata": {
         "id": "MiOuGPPRh4Jp"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -785,7 +785,7 @@
         "id": "KEnbLJ6epe2_",
         "outputId": "b9063eb3-78d9-4bd6-d5b7-c3353910326e"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -813,7 +813,7 @@
         "id": "Gi2_2RdlplNn",
         "outputId": "23aa6e0a-8b9d-430c-998f-96aedaf441ef"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -845,7 +845,7 @@
         "id": "jy8uaHAMp75p",
         "outputId": "0dcfffdc-a41d-4ff1-bd69-688bddab5f21"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -910,7 +910,7 @@
         "id": "odm9dJbOANUC",
         "outputId": "0eeb264c-882b-4628-ead4-ae1a58db695a"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -933,7 +933,7 @@
         "id": "AxL8Eu_tEt24",
         "outputId": "ced36003-2e12-4ae4-bcc9-548344695db4"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -972,7 +972,7 @@
         "id": "I2hWVPvWHzLH",
         "outputId": "df0de56e-9471-4fda-e8c8-adc82a730405"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -998,7 +998,7 @@
         "id": "yqrGaDyuJCp8",
         "outputId": "59ea2026-7c44-4a7e-f346-aa2b599d7747"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1029,7 +1029,7 @@
         "id": "inzCH2kJJFNC",
         "outputId": "8a13d679-14b4-4308-d0d8-9f62f6622c59"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1069,7 +1069,7 @@
         "id": "MVJ6xnSxJ0fG",
         "outputId": "feb09505-9129-4a7b-8c88-97da64cd6a72"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1105,7 +1105,7 @@
         "id": "pUA0_SlPJcsQ",
         "outputId": "a5ee6ca7-24b4-4131-9b73-062eee23819c"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
