Add model class

--- a/01_training_pred.ipynb
+++ b/01_training_pred.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMFCBzu3+V+DaUrlM2xgSMd",
+      "authorship_tag": "ABX9TyPOGdHL4AtBo9euXrgi8JVB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -156,7 +156,25 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Create the model class\n",
+        "class LinearRegressionModel(nn.Module):\n",
+        "  def __init__(self):\n",
+        "    super().__init__()\n",
+        "    self.quad_coef = nn.Parameter(torch.randn(1,\n",
+        "                                            requires_grad=True,\n",
+        "                                            dtype=torch.float))\n",
+        "    self.lin_coef = nn.Parameter(torch.randn(1,\n",
+        "                                         requires_grad=True,\n",
+        "                                         dtype=torch.float))\n",
+        "    self.const_coef = nn.Parameter(torch.randn(1,\n",
+        "                                         requires_grad=True,\n",
+        "                                         dtype=torch.float))\n",
+        "\n",
+        "  # Forward method\n",
+        "  def forward(self, x: torch.Tensor) -> torch.Tensor:\n",
+        "    return self.quad_coef * x ** 2 + self.lin_coef * x + self.bias"
+      ],
       "metadata": {
         "id": "sAzSvHjTSZhm"
       },
