Fix Model Class and create an instance

--- a/01_training_pred.ipynb
+++ b/01_training_pred.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPOGdHL4AtBo9euXrgi8JVB",
+      "authorship_tag": "ABX9TyN61ew12oR9z1WeLXDmBDou",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -158,7 +158,7 @@
       "cell_type": "code",
       "source": [
         "# Create the model class\n",
-        "class LinearRegressionModel(nn.Module):\n",
+        "class QuadraticRegressionModel(nn.Module):\n",
         "  def __init__(self):\n",
         "    super().__init__()\n",
         "    self.quad_coef = nn.Parameter(torch.randn(1,\n",
@@ -178,7 +178,49 @@
       "metadata": {
         "id": "sAzSvHjTSZhm"
       },
-      "execution_count": 15,
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Manual seed\n",
+        "torch.manual_seed(42)\n",
+        "\n",
+        "quad_reg_model = QuadraticRegressionModel()\n",
+        "\n",
+        "quad_reg_model.state_dict()\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rUQt8hUYbpiT",
+        "outputId": "8258a775-83f7-423b-a707-70d4f8a8ee4c"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "OrderedDict([('quad_coef', tensor([0.3367])),\n",
+              "             ('lin_coef', tensor([0.1288])),\n",
+              "             ('const_coef', tensor([0.2345]))])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "TC7WJSj1cRsl"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
