--- a/02_neural_network_classification.ipynb
+++ b/02_neural_network_classification.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPevT7QHa/ThlD3+KUAAnZB",
+      "authorship_tag": "ABX9TyNQT9L01yMxNEjc1ZPQwEWU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,7 +54,7 @@
       "metadata": {
         "id": "syG3QUMaHVGY"
       },
-      "execution_count": 1,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -73,7 +73,7 @@
       "metadata": {
         "id": "aXEcw7sMHZxr"
       },
-      "execution_count": 2,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -86,9 +86,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "L-e1D4yoHzRk",
-        "outputId": "37b06156-eea1-4254-e407-9a2f79929d01"
+        "outputId": "03b5ee27-6bef-453b-f812-9e1a9d075ed8"
       },
-      "execution_count": 3,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -98,7 +98,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 18
         }
       ]
     },
@@ -113,9 +113,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pigwKcupH2sC",
-        "outputId": "c57af36d-a22f-4c4a-d900-e77a5530e5d1"
+        "outputId": "1f7c72e4-fcc0-48be-d6b4-7b04cd8d63e2"
       },
-      "execution_count": 4,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -147,9 +147,9 @@
           "height": 363
         },
         "id": "rYnk0D8kIFTs",
-        "outputId": "2a53873f-8eb4-4932-88a4-d19d0a9df49f"
+        "outputId": "2802fdad-379b-4d48-f6d6-be07d573bd83"
       },
-      "execution_count": 5,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -169,7 +169,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-ba2a375d-f09b-4fb7-88c8-65d3c59d6f75\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-a9f6ceb2-740c-4583-8b6e-f2c78c5ca96d\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -260,7 +260,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ba2a375d-f09b-4fb7-88c8-65d3c59d6f75')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a9f6ceb2-740c-4583-8b6e-f2c78c5ca96d')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -312,12 +312,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-ba2a375d-f09b-4fb7-88c8-65d3c59d6f75 button.colab-df-convert');\n",
+              "        document.querySelector('#df-a9f6ceb2-740c-4583-8b6e-f2c78c5ca96d button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-ba2a375d-f09b-4fb7-88c8-65d3c59d6f75');\n",
+              "        const element = document.querySelector('#df-a9f6ceb2-740c-4583-8b6e-f2c78c5ca96d');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -337,8 +337,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-fc727902-61a7-4d22-b898-3c8ac8b9fb43\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-fc727902-61a7-4d22-b898-3c8ac8b9fb43')\"\n",
+              "<div id=\"df-f74c3369-b160-4202-ab40-2b711039f839\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-f74c3369-b160-4202-ab40-2b711039f839')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -457,7 +457,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-fc727902-61a7-4d22-b898-3c8ac8b9fb43 button');\n",
+              "        document.querySelector('#df-f74c3369-b160-4202-ab40-2b711039f839 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -468,7 +468,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 20
         }
       ]
     },
@@ -488,19 +488,19 @@
           "height": 448
         },
         "id": "NLCHdYEPJAzN",
-        "outputId": "15966084-e928-4a1c-fd3a-96a6215a24da"
+        "outputId": "500f5505-f36a-4499-8b8d-23c8108d9187"
       },
-      "execution_count": 6,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.collections.PathCollection at 0x7f1f46db2710>"
+              "<matplotlib.collections.PathCollection at 0x7f1eb33643a0>"
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 21
         },
         {
           "output_type": "display_data",
@@ -522,6 +522,229 @@
       "metadata": {
         "id": "KsBMi3NzKUwM"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 1.1 Chacking input and output shapes"
+      ],
+      "metadata": {
+        "id": "vCfAGX3aMQTb"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X.shape, y.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cTbElUiPMegL",
+        "outputId": "6386c41c-467c-49d1-b5a8-3c32fcd85cdd"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "((1000, 2), (1000,))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# view the first example of features and labels\n",
+        "X_sample = X[0]\n",
+        "y_sample = y[0]\n",
+        "\n",
+        "print(f\"Values for one sample of X: {X_sample} and the same for y: {y_sample}\")\n",
+        "print(f\"Shapes for one sample of X: {X_sample.shape} and the same for y: {y_sample.shape}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tiY7GFi1MgxR",
+        "outputId": "fa071de0-6a67-4d12-a29e-20e55aee3e6a"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Values for one sample of X: [0.75424625 0.23148074] and the same for y: 1\n",
+            "Shapes for one sample of X: (2,) and the same for y: ()\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 1.2 Turn data into tensors and create train and test splits"
+      ],
+      "metadata": {
+        "id": "cJGyvnUcNVYK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch"
+      ],
+      "metadata": {
+        "id": "y8dE-THcNqe5"
+      },
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X.dtype"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sMoQRLxCO8Jo",
+        "outputId": "47278515-fd65-406a-89cb-27b4459fd35b"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dtype('float64')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Turn data into tensors\n",
+        "X = torch.from_numpy(X).type(torch.float)\n",
+        "y = torch.from_numpy(y).type(torch.float)\n",
+        "\n",
+        "X[:5], y[:5]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rjAsYf6KNr_8",
+        "outputId": "8aa73753-b386-4571-9faa-b44eaa689b09"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(tensor([[ 0.7542,  0.2315],\n",
+              "         [-0.7562,  0.1533],\n",
+              "         [-0.8154,  0.1733],\n",
+              "         [-0.3937,  0.6929],\n",
+              "         [ 0.4422, -0.8967]]),\n",
+              " tensor([1., 1., 1., 1., 0.]))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(X), X.dtype, y.dtype"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ko7y7QAEODF8",
+        "outputId": "a1a279da-6949-4970-8004-0351255970aa"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(torch.Tensor, torch.float32, torch.float32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Split data into training and test sets\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X,\n",
+        "                                                    y,\n",
+        "                                                    test_size=0.2,    # 0.2 means 20% of the data will be test and 80% will be train\n",
+        "                                                    random_state=43)"
+      ],
+      "metadata": {
+        "id": "QMEOp0NOPWci"
+      },
+      "execution_count": 33,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len(X_train), len(X_test), len(y_train), len(y_test)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iy3lp5lAPj2G",
+        "outputId": "e337d749-bc36-4c9e-a962-9e4ceb6da8e9"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(800, 200, 800, 200)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "XdvUey0qQ8A_"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
